<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/restaurant_cont_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.restaurantView.RestaurantViewFragment">


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/restView_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="252dp"
        android:layout_marginEnd="24dp"
        android:clickable="true"
        android:src="@drawable/baseline_check_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/restView_imageView_header"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/restView_img_height"
        android:scaleType="centerCrop"
        android:src="@drawable/background_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/restView_LL_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/design_default_color_primary"
        android:orientation="vertical"
        android:padding="24dp"
        app:layout_constraintEnd_toEndOf="@id/restView_imageView_header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/restView_imageView_header">

        <LinearLayout
            android:id="@+id/restView_LL_displayName_rating"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingEnd="60dp">

            <TextView
                android:id="@+id/restView_TextView_displayName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="Titre"
                android:textColor="@android:color/background_light"
                android:textSize="24sp" />

            <RatingBar
                android:id="@+id/restView_ratingBar"
                style="@style/Widget.AppCompat.RatingBar.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numStars="5"
                android:rating="3.2" />
        </LinearLayout>

        <TextView
            android:id="@+id/restView_TextView_vicinity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textColor="@android:color/background_light" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/restView_LL_buttons"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/restView_LL_info">

        <LinearLayout
            android:id="@+id/restView_iconLL_call"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="@dimen/restView_icon_padding">

            <ImageView
                android:id="@+id/restView_icon_imageView_call"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/baseline_phone_24"
                app:tint="@color/design_default_color_primary" />

            <TextView
                android:id="@+id/restView_icon_textView_call"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxWidth="20dp"
                android:text="@string/restDetail_call"
                android:textAlignment="center"
                android:textColor="@color/design_default_color_primary" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/restView_iconLL_like"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="@dimen/restView_icon_padding">

            <ImageView
                android:id="@+id/restView_icon_imageView_like"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_star_rate_24"
                app:tint="@color/design_default_color_primary" />

            <TextView
                android:id="@+id/restView_icon_textView_like"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxWidth="20dp"
                android:text="@string/restDetail_like"
                android:textAlignment="center"
                android:textColor="@color/design_default_color_primary" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/restView_iconLL_website"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="@dimen/restView_icon_padding">

            <ImageView
                android:id="@+id/restView_icon_imageView_website"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/baseline_public_24"
                app:tint="@color/design_default_color_primary" />

            <TextView
                android:id="@+id/restView_icon_textView_website"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxWidth="20dp"
                android:text="@string/restDetail_website"
                android:textAlignment="center"
                android:textColor="@color/design_default_color_primary" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/restView_LL_buttons" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/restView_recyclerView_workmates"
        android:layout_width="416dp"
        android:layout_height="444dp"
        android:layout_weight="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/restView_LL_buttons" />
</androidx.constraintlayout.widget.ConstraintLayout>